Syntax_Analysis/conflicts.output
State 59 conflicts: 6 shift/reduce
State 60 conflicts: 6 shift/reduce
State 121 conflicts: 6 shift/reduce
State 122 conflicts: 6 shift/reduce
State 123 conflicts: 6 shift/reduce
State 124 conflicts: 6 shift/reduce
State 125 conflicts: 6 shift/reduce
State 126 conflicts: 6 shift/reduce
State 208 conflicts: 1 shift/reduce


Grammar

    0 $accept: program "end of file"

    1 program: header declarations subprograms comp_statement "."

    2 header: "program" "id" ";"

    3 declarations: constdefs typedefs vardefs

    4 constdefs: "const" constant_defs ";"
    5          | ε

    6 constant_defs: constant_defs ";" "id" "=" expression
    7              | "id" "=" expression

    8 expression: expression "> or >= or < or <= or <>" expression
    9           | expression "=" expression
   10           | expression "IN" expression
   11           | expression "OR" expression
   12           | expression "+ or -" expression
   13           | expression "* or / or DIV or AND or MOD" expression
   14           | "+ or -" expression
   15           | "NOT" expression
   16           | variable
   17           | "id" "(" expressions ")"
   18           | "length" "(" expression ")"
   19           | "new" "(" expression ")"
   20           | constant
   21           | "(" expression ")"
   22           | setlistexpression

   23 variable: "id"
   24         | variable "." "id"
   25         | variable "[" expressions "]"
   26         | "listfunc" "(" expression ")"

   27 expressions: expressions "," expression
   28            | expression

   29 constant: "integer constant"
   30         | "real constant"
   31         | "boolean constant"
   32         | "char constant"

   33 setlistexpression: "[" expressions "]"
   34                  | "[" "]"

   35 typedefs: "type" type_defs ";"
   36         | ε

   37 type_defs: type_defs ";" "id" "=" type_def
   38          | "id" "=" type_def

   39 type_def: "array" "[" dims "]" "of" typename
   40         | "list" "of" typename
   41         | "set" "of" typename
   42         | "record" fields "end"
   43         | limit ".." limit

   44 dims: dims "," limits
   45     | limits

   46 limits: limit ".." limit
   47       | "id"

   48 limit: sign "integer constant"
   49      | "char constant"
   50      | "boolean constant"
   51      | "+ or -" "id"
   52      | "id"

   53 sign: "+ or -"
   54     | ε

   55 typename: standard_type
   56         | "id"

   57 standard_type: "integer"
   58              | "real"
   59              | "boolean"
   60              | "char"

   61 fields: fields ";" field
   62       | field

   63 field: identifiers ":" typename

   64 identifiers: identifiers "," "id"
   65            | "id"

   66 vardefs: "var" variable_defs ";"
   67        | ε

   68 variable_defs: variable_defs ";" identifiers ":" typename
   69              | identifiers ":" typename

   70 subprograms: subprograms subprogram ";"
   71            | ε

   72 subprogram: sub_header ";" "forward"
   73           | sub_header ";" declarations subprograms comp_statement

   74 sub_header: "function" "id" formal_parameters ":" standard_type
   75           | "function" "id" formal_parameters ":" "list"
   76           | "procedure" "id" formal_parameters
   77           | "function" "id"

   78 formal_parameters: "(" parameter_list ")"
   79                  | ε

   80 parameter_list: parameter_list ";" pass identifiers ":" typename
   81               | pass identifiers ":" typename

   82 pass: "var"
   83     | ε

   84 $@1: ε

   85 comp_statement: "begin" $@1 statements "end"

   86 statements: statements ";" statement
   87           | statement

   88 statement: assignment
   89          | if_statement
   90          | case_statement
   91          | while_statement
   92          | for_statement
   93          | with_statement
   94          | subprogram_call
   95          | io_statement
   96          | comp_statement
   97          | ε

   98 assignment: variable ":=" expression
   99           | variable ":=" "string"

  100 if_statement: "if" expression "then" statement if_tail

  101 if_tail: "else" statement
  102        | ε

  103 case_statement: "case" expression "of" cases case_tail "end"

  104 cases: cases ";" single_case
  105      | single_case

  106 single_case: label_list ":" statement
  107            | ε

  108 label_list: label_list "," label
  109           | label

  110 label: sign constant
  111      | sign "id"

  112 case_tail: ";" "otherwise" ":" statement
  113          | ε

  114 while_statement: "while" expression "do" statement

  115 for_statement: "for" "id" ":=" iter_space "do" statement

  116 iter_space: expression "to" expression
  117           | expression "downto" expression

  118 with_statement: "with" variable "do" statement

  119 subprogram_call: "id"
  120                | "id" "(" expressions ")"

  121 io_statement: "read" "(" read_list ")"
  122             | "write" "(" write_list ")"

  123 read_list: read_list "," read_item
  124          | read_item

  125 read_item: variable

  126 write_list: write_list "," write_item
  127           | write_item

  128 write_item: expression
  129           | "string"


Terminals, with rules where they appear

    "end of file" <strval> (0) 0
    error (256)
    "program" <strval> (258) 2
    "const" <strval> (259) 4
    "type" <strval> (260) 35
    "array" <strval> (261) 39
    "list" <strval> (262) 40 75
    "set" <strval> (263) 41
    "of" <strval> (264) 39 40 41 103
    "record" <strval> (265) 42
    "var" <strval> (266) 66 82
    "function" <strval> (267) 74 75 77
    "procedure" <strval> (268) 76
    "integer" <strval> (269) 57
    "real" <strval> (270) 58
    "boolean" <strval> (271) 59
    "char" <strval> (272) 60
    "forward" <strval> (273) 72
    "length" <strval> (274) 18
    "new" <strval> (275) 19
    "begin" <strval> (276) 85
    "end" <strval> (277) 42 85 103
    "if" <strval> (278) 100
    "then" <strval> (279) 100
    "else" <strval> (280) 101
    "while" <strval> (281) 114
    "do" <strval> (282) 114 115 118
    "case" <strval> (283) 103
    "otherwise" <strval> (284) 112
    "for" <strval> (285) 115
    "to" <strval> (286) 116
    "downto" <strval> (287) 117
    "with" <strval> (288) 118
    "read" <strval> (289) 121
    "write" <strval> (290) 122
    "id" <strval> (291) 2 6 7 17 23 24 37 38 47 51 52 56 64 65 74 75 76 77 111 115 119 120
    "string" <strval> (292) 99 129
    "listfunc" <strval> (293) 26
    "integer constant" <intval> (294) 29 48
    "real constant" <realval> (295) 30
    "boolean constant" <strval> (296) 31 50
    "char constant" <strval> (297) 32 49
    "> or >= or < or <= or <>" <strval> (298) 8
    "+ or -" <strval> (299) 12 14 51 53
    "OR" <strval> (300) 11
    "* or / or DIV or AND or MOD" <strval> (301) 13
    "NOT" <strval> (302) 15
    "IN" <strval> (303) 10
    "(" <strval> (304) 17 18 19 21 26 78 120 121 122
    ")" <strval> (305) 17 18 19 21 26 78 120 121 122
    ";" <strval> (306) 2 4 6 35 37 61 66 68 70 72 73 80 86 104 112
    "." <strval> (307) 1 24
    "," <strval> (308) 27 44 64 108 123 126
    "=" <strval> (309) 6 7 9 37 38
    ":" <strval> (310) 63 68 69 74 75 80 81 106 112
    "[" <strval> (311) 25 33 34 39
    "]" <strval> (312) 25 33 34 39
    ":=" <strval> (313) 98 99 115
    ".." <strval> (314) 43 46


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    program <strval> (61)
        on left: 1
        on right: 0
    header <strval> (62)
        on left: 2
        on right: 1
    declarations <strval> (63)
        on left: 3
        on right: 1 73
    constdefs <strval> (64)
        on left: 4 5
        on right: 3
    constant_defs <strval> (65)
        on left: 6 7
        on right: 4 6
    expression <strval> (66)
        on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
        on right: 6 7 8 9 10 11 12 13 14 15 18 19 21 26 27 28 98 100 103 114 116 117 128
    variable <strval> (67)
        on left: 23 24 25 26
        on right: 16 24 25 98 99 118 125
    expressions <strval> (68)
        on left: 27 28
        on right: 17 25 27 33 120
    constant <strval> (69)
        on left: 29 30 31 32
        on right: 20 110
    setlistexpression <strval> (70)
        on left: 33 34
        on right: 22
    typedefs <strval> (71)
        on left: 35 36
        on right: 3
    type_defs <strval> (72)
        on left: 37 38
        on right: 35 37
    type_def <strval> (73)
        on left: 39 40 41 42 43
        on right: 37 38
    dims <strval> (74)
        on left: 44 45
        on right: 39 44
    limits <strval> (75)
        on left: 46 47
        on right: 44 45
    limit <strval> (76)
        on left: 48 49 50 51 52
        on right: 43 46
    sign <strval> (77)
        on left: 53 54
        on right: 48 110 111
    typename <strval> (78)
        on left: 55 56
        on right: 39 40 41 63 68 69 80 81
    standard_type <strval> (79)
        on left: 57 58 59 60
        on right: 55 74
    fields <strval> (80)
        on left: 61 62
        on right: 42 61
    field <strval> (81)
        on left: 63
        on right: 61 62
    identifiers <strval> (82)
        on left: 64 65
        on right: 63 64 68 69 80 81
    vardefs <strval> (83)
        on left: 66 67
        on right: 3
    variable_defs <strval> (84)
        on left: 68 69
        on right: 66 68
    subprograms <strval> (85)
        on left: 70 71
        on right: 1 70 73
    subprogram <strval> (86)
        on left: 72 73
        on right: 70
    sub_header <strval> (87)
        on left: 74 75 76 77
        on right: 72 73
    formal_parameters <strval> (88)
        on left: 78 79
        on right: 74 75 76
    parameter_list <strval> (89)
        on left: 80 81
        on right: 78 80
    pass <strval> (90)
        on left: 82 83
        on right: 80 81
    comp_statement <strval> (91)
        on left: 85
        on right: 1 73 96
    $@1 (92)
        on left: 84
        on right: 85
    statements <strval> (93)
        on left: 86 87
        on right: 85 86
    statement <strval> (94)
        on left: 88 89 90 91 92 93 94 95 96 97
        on right: 86 87 100 101 106 112 114 115 118
    assignment <strval> (95)
        on left: 98 99
        on right: 88
    if_statement <strval> (96)
        on left: 100
        on right: 89
    if_tail <strval> (97)
        on left: 101 102
        on right: 100
    case_statement <strval> (98)
        on left: 103
        on right: 90
    cases <strval> (99)
        on left: 104 105
        on right: 103 104
    single_case <strval> (100)
        on left: 106 107
        on right: 104 105
    label_list <strval> (101)
        on left: 108 109
        on right: 106 108
    label <strval> (102)
        on left: 110 111
        on right: 108 109
    case_tail <strval> (103)
        on left: 112 113
        on right: 103
    while_statement <strval> (104)
        on left: 114
        on right: 91
    for_statement <strval> (105)
        on left: 115
        on right: 92
    iter_space <strval> (106)
        on left: 116 117
        on right: 115
    with_statement <strval> (107)
        on left: 118
        on right: 93
    subprogram_call <strval> (108)
        on left: 119 120
        on right: 94
    io_statement <strval> (109)
        on left: 121 122
        on right: 95
    read_list <strval> (110)
        on left: 123 124
        on right: 121 123
    read_item <strval> (111)
        on left: 125
        on right: 123 124
    write_list <strval> (112)
        on left: 126 127
        on right: 122 126
    write_item <strval> (113)
        on left: 128 129
        on right: 126 127


State 0

    0 $accept: • program "end of file"

    "program"  shift, and go to state 1

    program  go to state 2
    header   go to state 3


State 1

    2 header: "program" • "id" ";"

    "id"  shift, and go to state 4


State 2

    0 $accept: program • "end of file"

    "end of file"  shift, and go to state 5


State 3

    1 program: header • declarations subprograms comp_statement "."

    "const"  shift, and go to state 6

    $default  reduce using rule 5 (constdefs)

    declarations  go to state 7
    constdefs     go to state 8


State 4

    2 header: "program" "id" • ";"

    ";"  shift, and go to state 9


State 5

    0 $accept: program "end of file" •

    $default  accept


State 6

    4 constdefs: "const" • constant_defs ";"

    "id"  shift, and go to state 10

    constant_defs  go to state 11


State 7

    1 program: header declarations • subprograms comp_statement "."

    $default  reduce using rule 71 (subprograms)

    subprograms  go to state 12


State 8

    3 declarations: constdefs • typedefs vardefs

    "type"  shift, and go to state 13

    $default  reduce using rule 36 (typedefs)

    typedefs  go to state 14


State 9

    2 header: "program" "id" ";" •

    $default  reduce using rule 2 (header)


State 10

    7 constant_defs: "id" • "=" expression

    "="  shift, and go to state 15


State 11

    4 constdefs: "const" constant_defs • ";"
    6 constant_defs: constant_defs • ";" "id" "=" expression

    ";"  shift, and go to state 16


State 12

    1 program: header declarations subprograms • comp_statement "."
   70 subprograms: subprograms • subprogram ";"

    "function"   shift, and go to state 17
    "procedure"  shift, and go to state 18
    "begin"      shift, and go to state 19

    subprogram      go to state 20
    sub_header      go to state 21
    comp_statement  go to state 22


State 13

   35 typedefs: "type" • type_defs ";"

    "id"  shift, and go to state 23

    type_defs  go to state 24


State 14

    3 declarations: constdefs typedefs • vardefs

    "var"  shift, and go to state 25

    $default  reduce using rule 67 (vardefs)

    vardefs  go to state 26


State 15

    7 constant_defs: "id" "=" • expression

    "length"            shift, and go to state 27
    "new"               shift, and go to state 28
    "id"                shift, and go to state 29
    "listfunc"          shift, and go to state 30
    "integer constant"  shift, and go to state 31
    "real constant"     shift, and go to state 32
    "boolean constant"  shift, and go to state 33
    "char constant"     shift, and go to state 34
    "+ or -"            shift, and go to state 35
    "NOT"               shift, and go to state 36
    "("                 shift, and go to state 37
    "["                 shift, and go to state 38

    expression         go to state 39
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 16

    4 constdefs: "const" constant_defs ";" •
    6 constant_defs: constant_defs ";" • "id" "=" expression

    "id"  shift, and go to state 43

    $default  reduce using rule 4 (constdefs)


State 17

   74 sub_header: "function" • "id" formal_parameters ":" standard_type
   75           | "function" • "id" formal_parameters ":" "list"
   77           | "function" • "id"

    "id"  shift, and go to state 44


State 18

   76 sub_header: "procedure" • "id" formal_parameters

    "id"  shift, and go to state 45


State 19

   85 comp_statement: "begin" • $@1 statements "end"

    $default  reduce using rule 84 ($@1)

    $@1  go to state 46


State 20

   70 subprograms: subprograms subprogram • ";"

    ";"  shift, and go to state 47


State 21

   72 subprogram: sub_header • ";" "forward"
   73           | sub_header • ";" declarations subprograms comp_statement

    ";"  shift, and go to state 48


State 22

    1 program: header declarations subprograms comp_statement • "."

    "."  shift, and go to state 49


State 23

   38 type_defs: "id" • "=" type_def

    "="  shift, and go to state 50


State 24

   35 typedefs: "type" type_defs • ";"
   37 type_defs: type_defs • ";" "id" "=" type_def

    ";"  shift, and go to state 51


State 25

   66 vardefs: "var" • variable_defs ";"

    "id"  shift, and go to state 52

    identifiers    go to state 53
    variable_defs  go to state 54


State 26

    3 declarations: constdefs typedefs vardefs •

    $default  reduce using rule 3 (declarations)


State 27

   18 expression: "length" • "(" expression ")"

    "("  shift, and go to state 55


State 28

   19 expression: "new" • "(" expression ")"

    "("  shift, and go to state 56


State 29

   17 expression: "id" • "(" expressions ")"
   23 variable: "id" •

    "("  shift, and go to state 57

    $default  reduce using rule 23 (variable)


State 30

   26 variable: "listfunc" • "(" expression ")"

    "("  shift, and go to state 58


State 31

   29 constant: "integer constant" •

    $default  reduce using rule 29 (constant)


State 32

   30 constant: "real constant" •

    $default  reduce using rule 30 (constant)


State 33

   31 constant: "boolean constant" •

    $default  reduce using rule 31 (constant)


State 34

   32 constant: "char constant" •

    $default  reduce using rule 32 (constant)


State 35

   14 expression: "+ or -" • expression

    "length"            shift, and go to state 27
    "new"               shift, and go to state 28
    "id"                shift, and go to state 29
    "listfunc"          shift, and go to state 30
    "integer constant"  shift, and go to state 31
    "real constant"     shift, and go to state 32
    "boolean constant"  shift, and go to state 33
    "char constant"     shift, and go to state 34
    "+ or -"            shift, and go to state 35
    "NOT"               shift, and go to state 36
    "("                 shift, and go to state 37
    "["                 shift, and go to state 38

    expression         go to state 59
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 36

   15 expression: "NOT" • expression

    "length"            shift, and go to state 27
    "new"               shift, and go to state 28
    "id"                shift, and go to state 29
    "listfunc"          shift, and go to state 30
    "integer constant"  shift, and go to state 31
    "real constant"     shift, and go to state 32
    "boolean constant"  shift, and go to state 33
    "char constant"     shift, and go to state 34
    "+ or -"            shift, and go to state 35
    "NOT"               shift, and go to state 36
    "("                 shift, and go to state 37
    "["                 shift, and go to state 38

    expression         go to state 60
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 37

   21 expression: "(" • expression ")"

    "length"            shift, and go to state 27
    "new"               shift, and go to state 28
    "id"                shift, and go to state 29
    "listfunc"          shift, and go to state 30
    "integer constant"  shift, and go to state 31
    "real constant"     shift, and go to state 32
    "boolean constant"  shift, and go to state 33
    "char constant"     shift, and go to state 34
    "+ or -"            shift, and go to state 35
    "NOT"               shift, and go to state 36
    "("                 shift, and go to state 37
    "["                 shift, and go to state 38

    expression         go to state 61
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 38

   33 setlistexpression: "[" • expressions "]"
   34                  | "[" • "]"

    "length"            shift, and go to state 27
    "new"               shift, and go to state 28
    "id"                shift, and go to state 29
    "listfunc"          shift, and go to state 30
    "integer constant"  shift, and go to state 31
    "real constant"     shift, and go to state 32
    "boolean constant"  shift, and go to state 33
    "char constant"     shift, and go to state 34
    "+ or -"            shift, and go to state 35
    "NOT"               shift, and go to state 36
    "("                 shift, and go to state 37
    "["                 shift, and go to state 38
    "]"                 shift, and go to state 62

    expression         go to state 63
    variable           go to state 40
    expressions        go to state 64
    constant           go to state 41
    setlistexpression  go to state 42


State 39

    7 constant_defs: "id" "=" expression •
    8 expression: expression • "> or >= or < or <= or <>" expression
    9           | expression • "=" expression
   10           | expression • "IN" expression
   11           | expression • "OR" expression
   12           | expression • "+ or -" expression
   13           | expression • "* or / or DIV or AND or MOD" expression

    "> or >= or < or <= or <>"     shift, and go to state 65
    "+ or -"                       shift, and go to state 66
    "OR"                           shift, and go to state 67
    "* or / or DIV or AND or MOD"  shift, and go to state 68
    "IN"                           shift, and go to state 69
    "="                            shift, and go to state 70

    $default  reduce using rule 7 (constant_defs)


State 40

   16 expression: variable •
   24 variable: variable • "." "id"
   25         | variable • "[" expressions "]"

    "."  shift, and go to state 71
    "["  shift, and go to state 72

    $default  reduce using rule 16 (expression)


State 41

   20 expression: constant •

    $default  reduce using rule 20 (expression)


State 42

   22 expression: setlistexpression •

    $default  reduce using rule 22 (expression)


State 43

    6 constant_defs: constant_defs ";" "id" • "=" expression

    "="  shift, and go to state 73


State 44

   74 sub_header: "function" "id" • formal_parameters ":" standard_type
   75           | "function" "id" • formal_parameters ":" "list"
   77           | "function" "id" •

    "("  shift, and go to state 74

    ":"       reduce using rule 79 (formal_parameters)
    $default  reduce using rule 77 (sub_header)

    formal_parameters  go to state 75


State 45

   76 sub_header: "procedure" "id" • formal_parameters

    "("  shift, and go to state 74

    $default  reduce using rule 79 (formal_parameters)

    formal_parameters  go to state 76


State 46

   85 comp_statement: "begin" $@1 • statements "end"

    "begin"     shift, and go to state 19
    "if"        shift, and go to state 77
    "while"     shift, and go to state 78
    "case"      shift, and go to state 79
    "for"       shift, and go to state 80
    "with"      shift, and go to state 81
    "read"      shift, and go to state 82
    "write"     shift, and go to state 83
    "id"        shift, and go to state 84
    "listfunc"  shift, and go to state 30

    $default  reduce using rule 97 (statement)

    variable         go to state 85
    comp_statement   go to state 86
    statements       go to state 87
    statement        go to state 88
    assignment       go to state 89
    if_statement     go to state 90
    case_statement   go to state 91
    while_statement  go to state 92
    for_statement    go to state 93
    with_statement   go to state 94
    subprogram_call  go to state 95
    io_statement     go to state 96


State 47

   70 subprograms: subprograms subprogram ";" •

    $default  reduce using rule 70 (subprograms)


State 48

   72 subprogram: sub_header ";" • "forward"
   73           | sub_header ";" • declarations subprograms comp_statement

    "const"    shift, and go to state 6
    "forward"  shift, and go to state 97

    $default  reduce using rule 5 (constdefs)

    declarations  go to state 98
    constdefs     go to state 8


State 49

    1 program: header declarations subprograms comp_statement "." •

    $default  reduce using rule 1 (program)


State 50

   38 type_defs: "id" "=" • type_def

    "array"             shift, and go to state 99
    "list"              shift, and go to state 100
    "set"               shift, and go to state 101
    "record"            shift, and go to state 102
    "id"                shift, and go to state 103
    "boolean constant"  shift, and go to state 104
    "char constant"     shift, and go to state 105
    "+ or -"            shift, and go to state 106

    $default  reduce using rule 54 (sign)

    type_def  go to state 107
    limit     go to state 108
    sign      go to state 109


State 51

   35 typedefs: "type" type_defs ";" •
   37 type_defs: type_defs ";" • "id" "=" type_def

    "id"  shift, and go to state 110

    $default  reduce using rule 35 (typedefs)


State 52

   65 identifiers: "id" •

    $default  reduce using rule 65 (identifiers)


State 53

   64 identifiers: identifiers • "," "id"
   69 variable_defs: identifiers • ":" typename

    ","  shift, and go to state 111
    ":"  shift, and go to state 112


State 54

   66 vardefs: "var" variable_defs • ";"
   68 variable_defs: variable_defs • ";" identifiers ":" typename

    ";"  shift, and go to state 113


State 55

   18 expression: "length" "(" • expression ")"

    "length"            shift, and go to state 27
    "new"               shift, and go to state 28
    "id"                shift, and go to state 29
    "listfunc"          shift, and go to state 30
    "integer constant"  shift, and go to state 31
    "real constant"     shift, and go to state 32
    "boolean constant"  shift, and go to state 33
    "char constant"     shift, and go to state 34
    "+ or -"            shift, and go to state 35
    "NOT"               shift, and go to state 36
    "("                 shift, and go to state 37
    "["                 shift, and go to state 38

    expression         go to state 114
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 56

   19 expression: "new" "(" • expression ")"

    "length"            shift, and go to state 27
    "new"               shift, and go to state 28
    "id"                shift, and go to state 29
    "listfunc"          shift, and go to state 30
    "integer constant"  shift, and go to state 31
    "real constant"     shift, and go to state 32
    "boolean constant"  shift, and go to state 33
    "char constant"     shift, and go to state 34
    "+ or -"            shift, and go to state 35
    "NOT"               shift, and go to state 36
    "("                 shift, and go to state 37
    "["                 shift, and go to state 38

    expression         go to state 115
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 57

   17 expression: "id" "(" • expressions ")"

    "length"            shift, and go to state 27
    "new"               shift, and go to state 28
    "id"                shift, and go to state 29
    "listfunc"          shift, and go to state 30
    "integer constant"  shift, and go to state 31
    "real constant"     shift, and go to state 32
    "boolean constant"  shift, and go to state 33
    "char constant"     shift, and go to state 34
    "+ or -"            shift, and go to state 35
    "NOT"               shift, and go to state 36
    "("                 shift, and go to state 37
    "["                 shift, and go to state 38

    expression         go to state 63
    variable           go to state 40
    expressions        go to state 116
    constant           go to state 41
    setlistexpression  go to state 42


State 58

   26 variable: "listfunc" "(" • expression ")"

    "length"            shift, and go to state 27
    "new"               shift, and go to state 28
    "id"                shift, and go to state 29
    "listfunc"          shift, and go to state 30
    "integer constant"  shift, and go to state 31
    "real constant"     shift, and go to state 32
    "boolean constant"  shift, and go to state 33
    "char constant"     shift, and go to state 34
    "+ or -"            shift, and go to state 35
    "NOT"               shift, and go to state 36
    "("                 shift, and go to state 37
    "["                 shift, and go to state 38

    expression         go to state 117
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 59

    8 expression: expression • "> or >= or < or <= or <>" expression
    9           | expression • "=" expression
   10           | expression • "IN" expression
   11           | expression • "OR" expression
   12           | expression • "+ or -" expression
   13           | expression • "* or / or DIV or AND or MOD" expression
   14           | "+ or -" expression •

    "> or >= or < or <= or <>"     shift, and go to state 65
    "+ or -"                       shift, and go to state 66
    "OR"                           shift, and go to state 67
    "* or / or DIV or AND or MOD"  shift, and go to state 68
    "IN"                           shift, and go to state 69
    "="                            shift, and go to state 70

    "> or >= or < or <= or <>"     [reduce using rule 14 (expression)]
    "+ or -"                       [reduce using rule 14 (expression)]
    "OR"                           [reduce using rule 14 (expression)]
    "* or / or DIV or AND or MOD"  [reduce using rule 14 (expression)]
    "IN"                           [reduce using rule 14 (expression)]
    "="                            [reduce using rule 14 (expression)]
    $default                       reduce using rule 14 (expression)


State 60

    8 expression: expression • "> or >= or < or <= or <>" expression
    9           | expression • "=" expression
   10           | expression • "IN" expression
   11           | expression • "OR" expression
   12           | expression • "+ or -" expression
   13           | expression • "* or / or DIV or AND or MOD" expression
   15           | "NOT" expression •

    "> or >= or < or <= or <>"     shift, and go to state 65
    "+ or -"                       shift, and go to state 66
    "OR"                           shift, and go to state 67
    "* or / or DIV or AND or MOD"  shift, and go to state 68
    "IN"                           shift, and go to state 69
    "="                            shift, and go to state 70

    "> or >= or < or <= or <>"     [reduce using rule 15 (expression)]
    "+ or -"                       [reduce using rule 15 (expression)]
    "OR"                           [reduce using rule 15 (expression)]
    "* or / or DIV or AND or MOD"  [reduce using rule 15 (expression)]
    "IN"                           [reduce using rule 15 (expression)]
    "="                            [reduce using rule 15 (expression)]
    $default                       reduce using rule 15 (expression)


State 61

    8 expression: expression • "> or >= or < or <= or <>" expression
    9           | expression • "=" expression
   10           | expression • "IN" expression
   11           | expression • "OR" expression
   12           | expression • "+ or -" expression
   13           | expression • "* or / or DIV or AND or MOD" expression
   21           | "(" expression • ")"

    "> or >= or < or <= or <>"     shift, and go to state 65
    "+ or -"                       shift, and go to state 66
    "OR"                           shift, and go to state 67
    "* or / or DIV or AND or MOD"  shift, and go to state 68
    "IN"                           shift, and go to state 69
    ")"                            shift, and go to state 118
    "="                            shift, and go to state 70


State 62

   34 setlistexpression: "[" "]" •

    $default  reduce using rule 34 (setlistexpression)


State 63

    8 expression: expression • "> or >= or < or <= or <>" expression
    9           | expression • "=" expression
   10           | expression • "IN" expression
   11           | expression • "OR" expression
   12           | expression • "+ or -" expression
   13           | expression • "* or / or DIV or AND or MOD" expression
   28 expressions: expression •

    "> or >= or < or <= or <>"     shift, and go to state 65
    "+ or -"                       shift, and go to state 66
    "OR"                           shift, and go to state 67
    "* or / or DIV or AND or MOD"  shift, and go to state 68
    "IN"                           shift, and go to state 69
    "="                            shift, and go to state 70

    $default  reduce using rule 28 (expressions)


State 64

   27 expressions: expressions • "," expression
   33 setlistexpression: "[" expressions • "]"

    ","  shift, and go to state 119
    "]"  shift, and go to state 120


State 65

    8 expression: expression "> or >= or < or <= or <>" • expression

    "length"            shift, and go to state 27
    "new"               shift, and go to state 28
    "id"                shift, and go to state 29
    "listfunc"          shift, and go to state 30
    "integer constant"  shift, and go to state 31
    "real constant"     shift, and go to state 32
    "boolean constant"  shift, and go to state 33
    "char constant"     shift, and go to state 34
    "+ or -"            shift, and go to state 35
    "NOT"               shift, and go to state 36
    "("                 shift, and go to state 37
    "["                 shift, and go to state 38

    expression         go to state 121
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 66

   12 expression: expression "+ or -" • expression

    "length"            shift, and go to state 27
    "new"               shift, and go to state 28
    "id"                shift, and go to state 29
    "listfunc"          shift, and go to state 30
    "integer constant"  shift, and go to state 31
    "real constant"     shift, and go to state 32
    "boolean constant"  shift, and go to state 33
    "char constant"     shift, and go to state 34
    "+ or -"            shift, and go to state 35
    "NOT"               shift, and go to state 36
    "("                 shift, and go to state 37
    "["                 shift, and go to state 38

    expression         go to state 122
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 67

   11 expression: expression "OR" • expression

    "length"            shift, and go to state 27
    "new"               shift, and go to state 28
    "id"                shift, and go to state 29
    "listfunc"          shift, and go to state 30
    "integer constant"  shift, and go to state 31
    "real constant"     shift, and go to state 32
    "boolean constant"  shift, and go to state 33
    "char constant"     shift, and go to state 34
    "+ or -"            shift, and go to state 35
    "NOT"               shift, and go to state 36
    "("                 shift, and go to state 37
    "["                 shift, and go to state 38

    expression         go to state 123
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 68

   13 expression: expression "* or / or DIV or AND or MOD" • expression

    "length"            shift, and go to state 27
    "new"               shift, and go to state 28
    "id"                shift, and go to state 29
    "listfunc"          shift, and go to state 30
    "integer constant"  shift, and go to state 31
    "real constant"     shift, and go to state 32
    "boolean constant"  shift, and go to state 33
    "char constant"     shift, and go to state 34
    "+ or -"            shift, and go to state 35
    "NOT"               shift, and go to state 36
    "("                 shift, and go to state 37
    "["                 shift, and go to state 38

    expression         go to state 124
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 69

   10 expression: expression "IN" • expression

    "length"            shift, and go to state 27
    "new"               shift, and go to state 28
    "id"                shift, and go to state 29
    "listfunc"          shift, and go to state 30
    "integer constant"  shift, and go to state 31
    "real constant"     shift, and go to state 32
    "boolean constant"  shift, and go to state 33
    "char constant"     shift, and go to state 34
    "+ or -"            shift, and go to state 35
    "NOT"               shift, and go to state 36
    "("                 shift, and go to state 37
    "["                 shift, and go to state 38

    expression         go to state 125
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 70

    9 expression: expression "=" • expression

    "length"            shift, and go to state 27
    "new"               shift, and go to state 28
    "id"                shift, and go to state 29
    "listfunc"          shift, and go to state 30
    "integer constant"  shift, and go to state 31
    "real constant"     shift, and go to state 32
    "boolean constant"  shift, and go to state 33
    "char constant"     shift, and go to state 34
    "+ or -"            shift, and go to state 35
    "NOT"               shift, and go to state 36
    "("                 shift, and go to state 37
    "["                 shift, and go to state 38

    expression         go to state 126
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 71

   24 variable: variable "." • "id"

    "id"  shift, and go to state 127


State 72

   25 variable: variable "[" • expressions "]"

    "length"            shift, and go to state 27
    "new"               shift, and go to state 28
    "id"                shift, and go to state 29
    "listfunc"          shift, and go to state 30
    "integer constant"  shift, and go to state 31
    "real constant"     shift, and go to state 32
    "boolean constant"  shift, and go to state 33
    "char constant"     shift, and go to state 34
    "+ or -"            shift, and go to state 35
    "NOT"               shift, and go to state 36
    "("                 shift, and go to state 37
    "["                 shift, and go to state 38

    expression         go to state 63
    variable           go to state 40
    expressions        go to state 128
    constant           go to state 41
    setlistexpression  go to state 42


State 73

    6 constant_defs: constant_defs ";" "id" "=" • expression

    "length"            shift, and go to state 27
    "new"               shift, and go to state 28
    "id"                shift, and go to state 29
    "listfunc"          shift, and go to state 30
    "integer constant"  shift, and go to state 31
    "real constant"     shift, and go to state 32
    "boolean constant"  shift, and go to state 33
    "char constant"     shift, and go to state 34
    "+ or -"            shift, and go to state 35
    "NOT"               shift, and go to state 36
    "("                 shift, and go to state 37
    "["                 shift, and go to state 38

    expression         go to state 129
    variable           go to state 40
    constant           go to state 41
    setlistexpression  go to state 42


State 74

   78 formal_parameters: "(" • parameter_list ")"

    "var"  shift, and go to state 130

    $default  reduce using rule 83 (pass)

    parameter_list  go to state 131
    pass            go to state 132


State 75

   74 sub_header: "function" "id" formal_parameters • ":" standard_type
   75           | "function" "id" formal_parameters • ":" "list"

    ":"  shift, and go to state 133


State 76

   76 sub_header: "procedure" "id" formal_parameters •

    $default  reduce using rule 76 (sub_header)


State 77

  100 if_statement: "if" • expression "then" statement if_tail
